--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,7 +1,7 @@
 <html lang='en'>
 <head>
   <meta charset='utf-8'>
-  <title>Deep COVID19 - Detecting COVID-19 from X-Ray/CT Scans</title>
+  <title>EXPERIMENT COVID19 - COVID-19 from X-Ray/CT Scans</title>
   <link rel='stylesheet' href='../static/style.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,12 +10,15 @@
 <body>
 <div>
   <div class='center'>
-    <h1 class='title'>Deep COVID19</h1>
-    <h2>Detecting COVID-19 from X-Ray/CT Scans using Deep Learning</h2>
+    <h1 class='title'>EXPERIMENT COVID19</h1>
+    <h2>COVID-19 from X-Ray/CT Scan</h2>
+
+<1>Koleksi basis data kasus COVID-19 dengan foto rontgen dada atau CT, serta MERS, SARS, dan ARDS.</h1>
+
     <p>
-      Read full details <a href="https://ashleyrudland.om/2020/03/16/detecting-covid19-with-ai.html" target="_blank">here</a>.
+      Link <a href="https://pneumonia-app.now.sh" target="_blank">here</a>.
     </p>
-    <p>To try it out, tap Select Image below.</p>
+    <p>Select Image below.</p>
     <div class='content'>
       <div class='no-display'>
         <input id='file-input'
